More updates and dockerization fixes
